[package]
edition = "2021"
name = "hoshi"
version = "0.1.0"

[dependencies]
# winapi = { version = "0.3.9", features = ["winuser", "wingdi", "libloaderapi"] }
windows-sys = {version = "0.59.0", features = [
  "Win32",
  "Wdk",
  "Win32_Graphics_Gdi",
  "Win32_System_LibraryLoader",
  "Win32_UI_WindowsAndMessaging",
]}
